--- a/bin/osx/properties.ini
+++ b/bin/osx/properties.ini
@@ -1,11 +1,12 @@
-GpssAddress=172.16.125.152:50007
-GreenplumAddress=172.16.125.152
+GpssAddress=192.168.12.145:50009
+GreenplumAddress=192.168.12.145
 GreenplumPort=5432
 GreenplumUser=gpadmin
 GreenplumPasswd=
 Database=dashboard
 SchemaName=public
-TableName=companies 
+TableName=people 
 rabbitstream=rabbitmq-stream://daniele:daniele@localhost:5552/
 streamName=gpss
 batch=3
+offset=lastconsumed
