--- a/bin/osx/properties.ini
+++ b/bin/osx/properties.ini
@@ -5,7 +5,7 @@ GreenplumUser=gpadmin
 GreenplumPasswd=
 Database=dashboard
 SchemaName=public
-TableName=people 
+TableName=companies 
 rabbitstream=rabbitmq-stream://daniele:daniele@localhost:5552/
 streamName=gpss
 batch=3
